# curves-test

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: basic_testing.yml
headers/: curve_test.h
samples/: CMakeLists.txt  usage_sample.cpp
sources/: CMakeLists.txt  curve_test.cpp
test/: CMakeLists.txt  testing.cpp
